scripts/deploy/kubernetes/ingress.yaml
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
# http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paimon-web
  labels:
    app: paimon-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / # Example annotation for path-based routing with Nginx Ingress Controller
spec:
  ingressClassName: nginx # Your ingress class name
  rules:
    - host: paimonweb.k8s.io # Replace with your desired hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paimon-web-svc
                port:
                  name: server
